Make helper expand function static

--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ Assignment 3 readme File
 ------------------------------------------------------------------------
 What is your name?
 
-
+Ziya Momin
 
 ------------------------------------------------------------------------
 What authorized sources of information did you use to complete the
@@ -12,7 +12,17 @@ in the "Policies" web page (also available on armlab in the file
 ~cos217/AuthorizedSourcesList ) to this section of the readme file,
 and edit it as appropriate.
 
+The course's lectures.
 
+The course's precepts.
+
+The course's website.
+
+Documents that are referenced directly by the course's website. Such documents include the course's lecture slides and precept handouts.
+
+The man pages on the armlab cluster.
+
+The course's current staff members outside of class time through Ed.
 
 ------------------------------------------------------------------------
 What unauthorized sources of information did you use to complete the
@@ -26,6 +36,7 @@ interaction, may additionally require the interaction being reported
 to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
 
+None
 
 
 ------------------------------------------------------------------------
@@ -36,6 +47,7 @@ enter your name in the space below the following affirmation:
 This paper represents my own work in accordance with University
 regulations.
 
+Ziya Momin
 
 
 ------------------------------------------------------------------------
@@ -56,7 +68,7 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
-
+None.
 
 ------------------------------------------------------------------------
 What warnings does critTer generate on symtablelist.c, and what are your
@@ -64,6 +76,16 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
+symtablelist.c: line 64: medium priority:
+   Do you want to validate 'pvValue' through an assert?
+
+   symtablelist.c: line 97: medium priority:
+   Do you want to validate 'pvValue' through an assert?
+
+   symtablelist.c: line 180: medium priority:
+   Do you want to validate 'pvExtra' through an assert?
+
+I disagree with these warnings because....
 
 
 ------------------------------------------------------------------------
