Remove hash table expanding temporarily for readme file

--- a/readme
+++ b/readme
@@ -94,6 +94,7 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
+None.
 
 
 ------------------------------------------------------------------------
@@ -102,7 +103,16 @@ disagreements with them? Copy the critTer warnings here, and express
 your disagreement after each warning. If there are no warnings, then
 write "None."
 
+symtablehash.c: line 149: medium priority:
+   Do you want to validate 'pvValue' through an assert?
 
+   symtablehash.c: line 190: medium priority:
+   Do you want to validate 'pvValue' through an assert?
+
+   symtablehash.c: line 274: medium priority:
+   Do you want to validate 'pvExtra' through an assert?
+
+I disagree with these warnings because...
 
 ------------------------------------------------------------------------
 What are the CPU times reported by testsymtable.c with binding counts
@@ -111,11 +121,11 @@ implementation, (2) your non-expanding hash table implementation, and
 (3) your expanding hash table implementation? Fill in the blanks.
 
 The linked list implementation with:
--- 50 bindings consumed ________ seconds.
--- 500 bindings consumed ________ seconds.
--- 5000 bindings consumed ________ seconds.
--- 50000 bindings consumed ________ seconds.
--- 500000 bindings consumed ________ seconds.
+-- 50 bindings consumed 0.003440 seconds.
+-- 500 bindings consumed 0.028087 seconds.
+-- 5000 bindings consumed 1.576459 seconds.
+-- 50000 bindings consumed 140.173167 seconds.
+-- 500000 bindings consumed more than 5 minutes.
 
 The non-expanding hash table implementation with:
 -- 50 bindings consumed ________ seconds.
