Make hashtable expanding again and save readme changes

--- a/readme
+++ b/readme
@@ -128,11 +128,11 @@ The linked list implementation with:
 -- 500000 bindings consumed more than 5 minutes.
 
 The non-expanding hash table implementation with:
--- 50 bindings consumed ________ seconds.
--- 500 bindings consumed ________ seconds.
--- 5000 bindings consumed ________ seconds.
--- 50000 bindings consumed ________ seconds.
--- 500000 bindings consumed ________ seconds.
+-- 50 bindings consumed 0.000000 seconds.
+-- 500 bindings consumed 0.004846 seconds.
+-- 5000 bindings consumed 1.083429 seconds.
+-- 50000 bindings consumed 108.741371 seconds.
+-- 500000 bindings consumed more than 5 minutes.
 
 The expanding hash table implementation with:
 -- 50 bindings consumed ________ seconds.
