--- a/readme
+++ b/readme
@@ -121,22 +121,22 @@ implementation, (2) your non-expanding hash table implementation, and
 (3) your expanding hash table implementation? Fill in the blanks.
 
 The linked list implementation with:
--- 50 bindings consumed 0.003440 seconds.
--- 500 bindings consumed 0.028087 seconds.
--- 5000 bindings consumed 1.576459 seconds.
--- 50000 bindings consumed 140.173167 seconds.
--- 500000 bindings consumed more than 5 minutes.
+-- 50 bindings consumed seconds.
+-- 500 bindings consumed  seconds.
+-- 5000 bindings consumed  seconds.
+-- 50000 bindings consumed seconds.
+-- 500000 bindings consumed .
 
 The non-expanding hash table implementation with:
--- 50 bindings consumed 0.000000 seconds.
--- 500 bindings consumed 0.004846 seconds.
--- 5000 bindings consumed 1.083429 seconds.
--- 50000 bindings consumed 108.741371 seconds.
--- 500000 bindings consumed more than 5 minutes.
+-- 50 bindings consumed  seconds.
+-- 500 bindings consumed  seconds.
+-- 5000 bindings consumed seconds.
+-- 50000 bindings consumed seconds.
+-- 500000 bindings consumed .
 
 The expanding hash table implementation with:
--- 50 bindings consumed ________ seconds.
--- 500 bindings consumed ________ seconds.
--- 5000 bindings consumed ________ seconds.
--- 50000 bindings consumed ________ seconds.
--- 500000 bindings consumed ________ seconds.
+-- 50 bindings consumed 0.000000 seconds.
+-- 500 bindings consumed 0.000000 seconds.
+-- 5000 bindings consumed 0.011334 seconds.
+-- 50000 bindings consumed 0.119724 seconds.
+-- 500000 bindings consumed 1.871879 seconds.
