Make hash table expanding again

--- a/readme
+++ b/readme
@@ -128,10 +128,10 @@ The linked list implementation with:
 -- 500000 bindings consumed .
 
 The non-expanding hash table implementation with:
--- 50 bindings consumed  seconds.
--- 500 bindings consumed  seconds.
--- 5000 bindings consumed seconds.
--- 50000 bindings consumed seconds.
+-- 50 bindings consumed 0.000000 seconds.
+-- 500 bindings consumed 0.000000 seconds.
+-- 5000 bindings consumed 0.008303 seconds.
+-- 50000 bindings consumed 0.416639 seconds.
 -- 500000 bindings consumed .
 
 The expanding hash table implementation with:
