--- a/readme
+++ b/readme
@@ -121,11 +121,11 @@ implementation, (2) your non-expanding hash table implementation, and
 (3) your expanding hash table implementation? Fill in the blanks.
 
 The linked list implementation with:
--- 50 bindings consumed seconds.
--- 500 bindings consumed  seconds.
--- 5000 bindings consumed  seconds.
--- 50000 bindings consumed seconds.
--- 500000 bindings consumed .
+-- 50 bindings consumed 0.000000 seconds.
+-- 500 bindings consumed 0.001648 seconds.
+-- 5000 bindings consumed 1.076774 seconds.
+-- 50000 bindings consumed 108.693252 seconds.
+-- 500000 bindings consumed more than 5 minutes.
 
 The non-expanding hash table implementation with:
 -- 50 bindings consumed 0.000000 seconds.
