Fix spacing in read me and other .c files

--- a/readme
+++ b/readme
@@ -18,7 +18,8 @@ The course's precepts.
 
 The course's website.
 
-Documents that are referenced directly by the course's website. Such documents include the course's lecture slides and precept handouts.
+Documents that are referenced directly by the course's website. Such
+documents include the course's lecture slides and precept handouts.
 
 The man pages on the armlab cluster.
 
