Initialize bucket sizes directly in the struct

--- a/readme
+++ b/readme
@@ -106,7 +106,7 @@ disagreements with them? Copy the splint warnings here, and express your
 disagreement after each warning. If there are no warnings, then write
 "None."
 
-None.
+need to fix warnings
 
 ------------------------------------------------------------------------
 What warnings does critTer generate on symtablehash.c, and what are your
